--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <meta charset="utf-8"/>
-<article>
-        <header>
-            <nav>
-            <a href="index.html">Home</a> AboutMe Contact</nav>
+<link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <header>
+         <nav>
+            <ul>
+                <li>
+                <a href="index.html">Home</a>
+                </li>
+                <li>
+                <a href="#aboutMe"> AboutMe</a>
+                </li>
+                <li>
+                <a href="#socialMedia"> Contact</a>
+                </li>
+            </ul>
+        </nav>
             <h1>J. David Perez-Sandoval</h1>
-            <p>"The traffic lights of my life always flash yellow"</p>
-        </header>
-
+            <small>"The traffic lights of my life always flash yellow"</small>
+    </header>
         <h2>Skills</h2>
         <ul>
             <li>Unlimited thirst for learning</li>
@@ -16,17 +29,22 @@
             <li>Very Creative</li>
         </ul>
 
-                <h2>About Me</h2>
+                <h2 id="aboutMe">About Me</h2>
             <figure>
                 <img src="david.jpg" style="width:25%"> <!--i tried using a link but it didn't let me -->
                 <figcaption>J. David Perez</figcaption>
             </figure>
-            <p>I've been in front of a computer ever since I was 1, very cool I know.<br> I developed a love of science from watching animal planet with my grandpa,<br> and I like to play guitar and do karaoke and pretend im part of the band. ;-;<br> I like to pick up hobbies, but if they are too complex it's hard for me to teach myself.<br> Source: I tried to learn to program on my own many times.</p>
+            <p id="bio">I've been in front of a computer ever since I was 1, very cool I know.<br>
+                 I developed a love of science from watching animal planet with my grandpa,<br>
+                  and I like to play guitar and do karaoke and pretend im part of the band. ;-;<br>
+                  I like to pick up hobbies, but if they are too complex it's hard for me to teach myself.<br>
+                   Source: I tried to learn to program on my own many times.</p>
             <footer>
-            
-            <h2>Social Media</h2>
+    
+            <h2 id="socialMedia">Social Media</h2>
             <a href="https://github.com/RestedWickedDev">GitHub</a>
             <p>please don't look for the rest</p> <!-- please I beg of you-->
+            <p>Email: <a href="mailto: jesusdperez02@gmail.com">JesusDPerez02@gmail.com</a></p>
             </footer>
-</article>
+        </body>
 </html>
